openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hosts-scraper
  labels:
    app: hosts-scraper
spec:
  to:
    kind: Service
    name: hosts-scraper
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
